Remove IT profile